<resources>
    <string name="app_name">CBMS</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."
    </string>
    <string name="title_activity_wellcome">WellcomeActivity</string>
    <string name="string_null"> </string>
    <string name="loading">loading</string>


    <string name="experience">立即体验</string>
    <string name="skip">跳过</string>

    <!-- Strings related to login -->
    <string name="login_error">请重新登录</string>

    <!--底部弹出对话框-->
    <string name="action_settings">Settings</string>
    <string name="cancel">取消</string>
    <string name="save">保存</string>
    <string name="search">搜索</string>


    <!--登录页面-->
    <string name="wel_title">欢迎使用皇玺会</string>
    <string name="input_accoumnt">输入登录账号</string>
    <string name="input_password">输入密码</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="turn_language">切换语言</string>

    <string name="toast_input_account">请输入登录账号</string>
    <string name="toast_account_length">登录账号最多30个字</string>
    <string name="toast_input_password">请输入登录密码</string>
    <string name="toast_input_password_regex">登录密码必须包含大小写字母及数字</string>
    <string name="toast_input_password_length">登录密码长度必须在8-20位之间</string>

    <string name="login_message1">您的注册账号正在审核(3个工作日内完成)，请稍后</string>
    <string name="login_message2">您的注册账号正在审核(2个工作日内完成)，请稍后</string>
    <string name="login_message3">您的注册账号正在审核(1个工作日内完成)，请稍后</string>

    <!--注册-选择注册类型-->
    <string name="choice_account_type">选择我的身份</string>
    <string name="personal_user">个人用户</string>
    <string name="company_user">机构用户</string>
    <string name="next">下一步</string>
    <string name="submit">提交</string>
    <string name="confirm">确认</string>
    <string name="doubt">疑问</string>

    <!--机构注册第一页步页面-->
    <string name="register_certificates_type">证件类型</string>
    <string name="register_certificates_name">证件名称</string>
    <string name="register_certificates_name_hint">请输入证件名称(必填)</string>
    <string name="register_certificates_code">证件号</string>
    <string name="register_certificates_code_hint">请输入证件号(必填)</string>
    <string name="register_witness1">证明人1</string>
    <string name="register_witness1_account">证明人1户口号</string>
    <string name="register_witness2_account">证明人2户口号</string>
    <string name="register_witness1_hint">请输入证明人姓名(必填)</string>
    <string name="register_witness2">证明人2</string>
    <string name="register_input_hint">请输入(必填)</string>
    <string name="register_input_hint2">请输入</string>
    <string name="register_address">家庭地址</string>

    <string name="toast_company_name">请输入机构名称</string>
    <string name="toast_company_name_length">机构名称最多60个字</string>
    <string name="toast_select_certificate_type">请选择证件类型</string>
    <string name="toast_certificate_name">请输入证件名称</string>
    <string name="toast_certificate_name_length">证件名称最多30个字</string>
    <string name="toast_certificate_code">请输入证件号</string>
    <string name="toast_certificate_code_length">证件号最多60个字</string>
    <string name="toast_photo">请选择证件图片</string>
    <string name="toast_address">请输入地址</string>
    <string name="toast_address_length">地址最多60个字</string>
    <string name="toast_witness1_name">请输入证明人1的姓名</string>
    <string name="toast_witness1_code">请输入证明人1的户口号</string>
    <string name="toast_witness2_name">请输入证明人2的姓名</string>
    <string name="toast_witness2_code">请输入证明人2的户口号</string>
    <string name="toast_witness_code_same">证明人1与证明人2的户口号相同</string>

    <!--机构注册第二页步页面-->
    <string name="register_company_name">机构名称</string>
    <string name="register_company_type">机构类型</string>
    <string name="register_company_address">机构地址</string>
    <string name="register_certificates_photo">证件照片</string>


    <string name="faren">法人</string>
    <string name="other">其他</string>
    <string name="select_please">请选择</string>

    <!--机构注册第三页步页面-->
    <string name="register_contact">注册联系人</string>
    <string name="register_contact_type">联系方式</string>
    <string name="register_gender">性别</string>
    <string name="name">姓名</string>

    <!--个人注册第一页步页面-->
    <string name="language">官方语言</string>
    <string name="admin_account">管理员账号</string>
    <string name="login_password">登录密码</string>
    <string name="re_password">验证登录密码</string>
    <string name="login_phone">预留信息</string>
    <string name="login_parent_account">上线户口号</string>
    <string name="login_parent_name">上线姓名</string>

    <string name="hint_re_password">请再次输入登录密码</string>

    <string name="toast_select_language">请选择官方语言</string>
    <string name="toast_input_username">请输入登录账号</string>
    <string name="toast_re_password">两次密码不一致</string>
    <string name="toast_input_reserve">请输入预留信息</string>
    <string name="toast_reserve_length">预留信息最多30个字</string>
    <string name="toast_parent_error">上线错误</string>

    <!--个人注册第二页步页面-->
    <!--个人注册第三页步页面-->

    <!--选择语言-->
    <string name="language_zh">简体中文</string>
    <string name="language_tw">繁体中文</string>
    <string name="language_en">英语</string>
    <string name="language_km">高棉语</string>
    <string-array name="array_language_array">
        <item>简体中文</item>
        <item>繁体中文</item>
        <item>英语</item>
        <item>高棉语</item>
    </string-array>

    <string name="register_company_type_faren">法人</string>
    <string name="register_company_type_team">事业单位</string>
    <string name="register_company_type_other">其他团体</string>

    <string name="register_certificates_type_photo">营业执照</string>

    <string name="register_photo_album">系统相册</string>
    <string name="register_photo_camera">拍照</string>


    <string name="man">先生</string>
    <string name="woman">小姐/女士</string>

    <string name="sms_line">Line</string>
    <string name="sms_phone">Phone</string>
    <string name="sms_potato">Potato No</string>
    <string name="sms_telegram">Telegram NO</string>
    <string name="sms_sms">SMS</string>
    <string name="sms_wechat">Wechat ID</string>
    <string name="sms_whatsapp">Whatsapp</string>

    <string name="person_idcard">身份证</string>
    <string name="person_passport">护照</string>

    <string-array name="sms">
        <item>Line</item>
        <item>Phone</item>
        <item>Potato No</item>
        <item>Telegram NO</item>
        <item>SMS</item>
        <item>Wechat ID</item>
        <item>Whatsapp</item>
    </string-array>

    <!--用户类型-->
    <string-array name="array_account_type">
        <item>机构用户</item>
        <item>个人用户</item>
    </string-array>
    <string name="title_activity_test_menu">TestMenuActivity</string>
    <string name="title_activity_input_sns">InputSNSActivity</string>
    <string name="input_sns_title">输入联系方式</string>
    <string name="input_sns">请输入联系方式</string>
    <string name="add_sns">添加联系方式</string>

    <string name="tv_country">国家</string>
    <string name="select_country">选择国家</string>
    <string name="select_province">选择省份</string>
    <string name="select_city">选择城市</string>
    <string name="tv_area">地区</string>
    <string name="tv_city">城市</string>
    <string name="tv_address">详细地址</string>
    <string name="search_hint">输入国家名称</string>
    <string name="please_select_country">请选择国家</string>
    <string name="please_select_province">请选择省份</string>
    <string name="please_select_city">请选择城市</string>
    <string name="please_input_address">请输入详细地址</string>

    <string-array name="country">
        <item>A</item>
        <item>阿布哈兹*</item>
        <item>阿富汗</item>
        <item>阿尔巴尼亚</item>
        <item>阿尔及利亚</item>
        <item>安道尔</item>
        <item>安哥拉</item>
        <item>安提瓜和巴布达</item>
        <item>阿根廷</item>
        <item>亚美尼亚</item>
        <item>澳大利亚</item>
        <item>奥地利</item>
        <item>阿塞拜疆</item>
        <item>B</item>
        <item>巴哈马</item>
        <item>巴林</item>
        <item>孟加拉国</item>
        <item>巴巴多斯</item>
        <item>白俄罗斯</item>
        <item>比利时</item>
        <item>伯利兹</item>
        <item>贝宁</item>
        <item>不丹</item>
        <item>玻利维亚</item>
        <item>波黑</item>
        <item>博茨瓦纳</item>
        <item>巴西</item>
        <item>文莱</item>
        <item>保加利亚</item>
        <item>布基纳法索</item>
        <item>布隆迪</item>
        <item>C</item>
        <item>柬埔寨</item>
        <item>喀麦隆</item>
        <item>加拿大</item>
        <item>佛得角</item>
        <item>加泰罗尼亚</item>
        <item>中非共和国</item>
        <item>乍得</item>
        <item>智利</item>
        <item>中国</item>
        <item>哥伦比亚</item>
        <item>科摩罗</item>
        <item>刚果共和国</item>
        <item>刚果民主共和国</item>
        <item>库克群岛</item>
        <item>哥斯达黎加</item>
        <item>科特迪瓦</item>
        <item>克罗地亚</item>
        <item>古巴</item>
        <item>塞浦路斯</item>
        <item>捷克</item>
        <item>D</item>
        <item>丹麦</item>
        <item>吉布提</item>
        <item>顿涅茨克</item>
        <item>多米尼克</item>
        <item>多米尼加</item>
    </string-array>
    <string name="title_activity_select_country">SelectCountryActivity</string>
    <string name="title_activity_address">AddressActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="home">首页</string>
    <string name="credit">授信</string>
    <string name="subordinate">下线</string>
    <string name="bill">账单</string>


    <string name="wallet">钱包</string>
    <string name="withdrawals">提现</string>
    <string name="recharge">充值</string><!--topped up-->
    <string name="repayment">还款</string>
    <string name="surplus_labele">余额(元)</string>
    <string name="credit_labele">授信(元)</string>
    <string name="surplusable">可提现额度:%1.2元</string>
    <string name="creditable">已用额度:%1$.2元</string>
    <string name="apply_credit">申请授信</string>
    <string name="already_use_credit">(已使用额度)</string>


    <string name="order_firm">确认订单</string>
    <string name="order_wait">待确认订单</string>
    <string name="order_not_firm">存疑订单</string>
    <string name="order_all">全部订单</string>

    <string name="select_all">全选</string>
    <string name="title_activity_preview">PreviewActivity</string>


</resources>
