<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/background">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                style="@style/WelcomeFontStyle"
                android:text="@string/wel_title"/>


                <EditText
                    android:id="@+id/auto_et_account"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/input_accoumnt"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:background="@null"
                    android:drawableBottom="@drawable/edittext_login_style"
                    style="@style/MyEditText"/>



                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/input_password"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:background="@null"
                    android:drawableBottom="@drawable/edittext_login_style"
                    style="@style/MyEditText"/>


            <TextView
                android:id="@+id/tv_login_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                style="@style/loginMessageFontStyle"/>

            <Button
                android:id="@+id/btn_login"
                android:background="@drawable/btn_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/login" />

            <TextView
                android:id="@+id/tv_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="right"
                android:text="@string/register"
                android:textColor="@color/white"
                android:textSize="18sp"/>

        </LinearLayout>
</LinearLayout>
