<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white_background">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/blue"
            android:layout_weight="1">
            <TextView
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp"
                android:text="@string/order_wait"
                android:background="@color/white"
                android:layout_marginBottom="1dp"/>

        </LinearLayout>
        <LinearLayout
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <TextView
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp"
                android:text="@string/order_not_firm"
                android:background="@color/white"
                android:layout_marginBottom="1dp"/>

        </LinearLayout>
        <LinearLayout
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <TextView
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp"
                android:text="@string/order_all"
                android:background="@color/white"
                android:layout_marginBottom="1dp"/>

        </LinearLayout>

    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">
        <RadioButton
            android:id="@+id/rbtn_select_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="@dimen/page_left_right_margin"
            android:textColor="@color/grey"
            android:text="@string/select_all"/>
        <TextView
            android:id="@+id/tv_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/page_left_right_margin"
            android:layout_centerVertical="true"
            android:textColor="@color/blue"
            android:text="@string/confirm"/>
        <TextView
            android:id="@+id/tv_doubt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@id/tv_confirm"
            android:layout_marginRight="@dimen/page_left_right_margin"
            android:layout_centerVertical="true"
            android:textColor="@color/blue"
            android:text="@string/doubt"/>
    </RelativeLayout>
    <include layout="@layout/line"/>
</LinearLayout>
