<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:layout_marginTop="@dimen/item_margin_top">
    <LinearLayout
        android:layout_marginLeft="@dimen/page_left_right_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tv_surplus_labele"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:text="@string/surplus_labele" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tv_surplus"
                android:textSize="24sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="13000.00" />
            <TextView
                android:id="@+id/tv_already_use_credit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/already_use_credit" />

        </LinearLayout>
        <TextView
            android:id="@+id/tv_surplusable"
            android:textSize="18sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/surplusable" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginRight="@dimen/page_left_right_margin"
        android:orientation="vertical"
        android:gravity="right">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right">
            <TextView
                android:id="@+id/tv_apply_credit"
                android:textColor="@color/blue"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/apply_credit" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_gravity="bottom">
            <Button
                android:background="@drawable/btn_withdrawals_style"
                android:layout_marginLeft="@dimen/page_left_right_margin"
                android:id="@+id/btn_toppedup"
                android:textSize="22sp"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recharge"/>
            <Button
                android:background="@drawable/btn_toppedup_style"
                android:layout_marginLeft="@dimen/page_left_right_margin"
                android:id="@+id/btn_withdrawals"
                android:textSize="22sp"
                android:textColor="@color/blue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/withdrawals"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
